<resources>
    <string name="app_name">3CPO Compatibility</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="openCustomersListButton">View Customers</string>
    <string name="openVehiclesListButton">View Vehicles</string>
    <string name="title_activity_properties">PropertiesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_customers">CustomersActivity</string>
    <string name="customerTextTest">This is to test customer tab on the app</string>
    <string name="propertiesTextTest">List of all the properties that Admin has access to</string>
    <string name="title_activity_vehicles">VehiclesActivity</string>
    <string name="vehiclesTextTest">List of all the vehicles admin can see</string>
    <string name="title_activity_add_vehicle">AddVehicleActivity</string>
    <string name="openPropertiesListButton">View Properties</string>
    <string name="openAddVehicleButton">Add Vehicles</string>
    <string-array name="sort_array">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
    <string name="openAddPropertiesButton">Add Properties</string>
    <string name="openAddCustomersButton">Add Customers</string>
</resources>
