<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/home"/>
        <item
                android:id="@+id/nav_account"
                android:title="@string/account"/>
        <item
            android:id="@+id/nav_properties"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/openPropertiesListButton" />
        <item
            android:id="@+id/nav_customers"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/openCustomersListButton" />
        <item
            android:id="@+id/nav_vehicles"
            android:icon="@drawable/ic_car"
            android:title="@string/openVehiclesListButton" />
    </group>
</menu>